# temp

./: .gitignore
edupick-server/: Crawler.py  app.py  course_data.csv  db.py  pyproject.toml
